# solsys-functional

./: .gitignore  README.md  solsys-nginx.conf
backend/: Factor.hs  INSTRUCTIONS  INSTRUCTIONS.md  Main.hs  compile-logint  compile-main  compile-msieve  compile-primecount  compileMain  glue.cc  hook.c  li.cpp  run-main  server.hs  solsys-backend.cabal
backend/Primes/: Factor.hs  Factorization.hs  Logint.hs  Pix.hs  Primecount.hs  glue.cc
backend/Primes/glue/msieve/: glue.c
backend/Primes/glue/primecount/: glue.cc
backend/Solsys/: Planets.hs  Print.hs  RFactor.hs
backend/Solsys/Printer/: JSON.hs  Whitespace.hs
backend/aws/: solsys-function.sh
backend/haskell/: .gitignore  ChangeLog.md  README.md  package.yaml
backend/src/: Logint.hs  Primecount.hs
solsys-backend/: .gitignore  ChangeLog.md  README.md  package.yaml
solsys-core/: .gitignore  ChangeLog.md  LICENSE  README.md  compile-logint  compile-msieve  compile-primecount  package.yaml  stack.yaml
solsys-core/app/: Main.hs  Server.hs
solsys-core/src/Primes/: Factorization.hs  Logint.hs
solsys-core/src/Primes/glue/primecount/: glue.cc
solsys-core/src/Solsys/: Planets.hs
solsys-core/src/Solsys/Printer/: JSON.hs  Whitespace.hs
