name:                solsys-backend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/solsys-backend#readme
license:             BSD3
license-file:        LICENSE
author:              Dylan Thinnes
maintainer:          dylan.thinnes@protonmail.com
copyright:           2018 Dylan Thinnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable solsys-backend
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
